@@ -1,129 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<project name="junrar-from-maven" default="package" basedir=".">
-  <property file="${user.home}/.m2/maven.properties"/>
-  <property file="maven-build.properties"/>
-
-  <property name="maven.build.finalName" value="junrar-0.6"/>
-  <property name="maven.build.dir" value="target"/>
-  <property name="maven.build.outputDir" value="${maven.build.dir}/classes"/>
-  <property name="maven.build.srcDir.0" value="src/main/java"/>
-  <property name="maven.build.resourceDir.0" value="src/main/resources"/>
-  <property name="maven.build.testOutputDir" value="${maven.build.dir}/test-classes"/>
-  <property name="maven.build.testDir.0" value="src/test/java"/>
-  <property name="maven.build.testResourceDir.0" value="src/test/resources"/>
-  <property name="maven.test.reports" value="${maven.build.dir}/test-reports"/>
-  <property name="maven.reporting.outputDirectory" value="${maven.build.dir}/site"/>
-
-  <property name="maven.repo.local" value="${user.home}/.m2/repository"/>
-  <property name="maven.settings.offline" value="false"/>
-  <property name="maven.settings.interactiveMode" value="true"/>
-
-  <path id="build.classpath"></path>
-  <path id="build.test.classpath"></path>
-
-  <target name="clean" description="Clean the output directory">
-    <delete dir="${maven.build.dir}"/>
-  </target>
-
-  <target name="compile" depends="get-deps" description="Compile the code">
-    <mkdir dir="${maven.build.outputDir}"/>
-    <javac destdir="${maven.build.outputDir}" 
-           nowarn="false" 
-           debug="true" 
-           optimize="false" 
-           deprecation="true" 
-           target="1.1" 
-           verbose="false" 
-           fork="false" 
-           source="1.5">
-      <src>
-        <pathelement location="${maven.build.srcDir.0}"/>
-      </src>
-      <classpath refid="build.classpath"/>
-    </javac>
-  </target>
-
-  <target name="compile-tests" 
-          depends="compile" 
-          description="Compile the test code" 
-          unless="maven.test.skip">
-    <mkdir dir="${maven.build.testOutputDir}"/>
-  </target>
-
-  <target name="test" 
-          depends="compile-tests, junit-missing" 
-          unless="junit.skipped" 
-          description="Run the test cases"/>
-
-  <target name="test-junit-present">
-    <available classname="junit.framework.Test" property="junit.present"/>
-  </target>
-
-  <target name="test-junit-status" 
-          depends="test-junit-present">
-    <condition property="junit.missing">
-      <and>
-        <isfalse value="${junit.present}"/>
-        <isfalse value="${maven.test.skip}"/>
-      </and>
-    </condition>
-    <condition property="junit.skipped">
-      <or>
-        <isfalse value="${junit.present}"/>
-        <istrue value="${maven.test.skip}"/>
-      </or>
-    </condition>
-  </target>
-
-  <target name="junit-missing" 
-          depends="test-junit-status" 
-          if="junit.missing">
-  </target>
-
-  <target name="javadoc" description="Generates the Javadoc of the application">
-    <javadoc sourcepath="${maven.build.srcDir.0}" 
-             packagenames="*" 
-             destdir="${maven.reporting.outputDirectory}/apidocs" 
-             access="protected" 
-             old="false" 
-             verbose="false" 
-             version="true" 
-             use="true" 
-             author="true" 
-             splitindex="false" 
-             nodeprecated="false" 
-             nodeprecatedlist="false" 
-             notree="false" 
-             noindex="false" 
-             nohelp="false" 
-             nonavbar="false" 
-             serialwarn="false" 
-             charset="ISO-8859-1" 
-             linksource="false" 
-             breakiterator="false"/>
-  </target>
-
-  <target name="package" depends="compile,test" description="Package the application">
-    <jar jarfile="${maven.build.dir}/${maven.build.finalName}.jar" 
-         compress="true" 
-         index="false" 
-         basedir="${maven.build.outputDir}" 
-         excludes="**/package.html"/>
-  </target>
-
-  <target name="jar" depends="package" description="Builds the jar for the application"/>
-
-  <target name="test-offline">
-    <condition property="maven.mode.offline">
-      <equals arg1="${maven.settings.offline}" arg2="true"/>
-    </condition>
-  </target>
-
-  <target name="get-deps" 
-          depends="test-offline" 
-          description="Download all dependencies" 
-          unless="maven.mode.offline">
-  </target>
-
-</project>
