@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <maintainer>
-    <email>jlec@j-schmitz.net</email>
-    <name>Justin Lecher (jlec)</name>
-  </maintainer>
-  <maintainer>
-    <email>johann@j-schmitz.net</email>
-    <name>Johann Schmitz</name>
-  </maintainer>
+	<herd>java</herd>
+	<upstream>
+		<remote-id type="github">edmund-wagner/junrar</remote-id>
+	</upstream>
 </pkgmetadata>
